# mlir-toy

./: .gitignore  CMakeLists.txt  Makefile  README.md  ast.hpp  commons.hpp  lexer-driver.cpp  lexer.cpp  lexer.hpp  parser-driver.cpp  parser.cpp  parser.hpp  test.toy  test1.toy  toyir-gen-driver.cpp
codegen/: CMakeLists.txt  ToyIRGen.cpp  ToyIRGen.hpp
dialect/: CMakeLists.txt  ToyDialect.h  ToyDialect.td  ToyOps.h  ToyOps.td
include/: ast.hpp  commons.hpp
include/Toy/: Passes.h  ToyDialect.h  ToyDialect.td  ToyOps.h  ToyOps.td
include/codegen/: ToyIRGen.hpp
include/lexer/: lexer.hpp
include/parser/: parser.hpp
lexer/: CMakeLists.txt  lexer.cpp  lexer.hpp
lib/: ast.hpp
lib/Toy/: CMakeLists.txt  LowerToAffinePass.cpp  ToyCombine.cpp  ToyDialect.cpp  ToyOps.cpp
parser/: CMakeLists.txt  parser.cpp  parser.hpp
